@@ -5,4 +5,6 @@ class AGE_SaveDialog: public AGE_OpenSave
 {
 public:
     AGE_SaveDialog(wxWindow *parent);
+
+    wxCheckBox *SyncWithReadPaths;
 };
